--- a/pom.xml
+++ b/pom.xml
@@ -36,8 +36,8 @@
     <!-- properties for script build step that creates the config files for the artifacts -->
     <data.pipeline.parent>system:cdap-data-pipeline[6.1.2-SNAPSHOT,7.0.0-SNAPSHOT)</data.pipeline.parent>
     <data.stream.parent>system:cdap-data-streams[6.1.2-SNAPSHOT,7.0.0-SNAPSHOT)</data.stream.parent>
-    <cdap.version>6.7.0-SNAPSHOT</cdap.version>
-    <hydrator.version>2.9.0-SNAPSHOT</hydrator.version>
+    <cdap.version>6.4.0</cdap.version>
+    <hydrator.version>2.6.0</hydrator.version>
     <hadoop.version>2.3.0</hadoop.version>
     <commons.net.version>3.6</commons.net.version>
     <sshj.version>0.27.0</sshj.version>
