--- a/pom.xml
+++ b/pom.xml
@@ -41,7 +41,7 @@
     <hadoop.version>2.3.0</hadoop.version>
     <commons.net.version>3.6</commons.net.version>
     <sshj.version>0.27.0</sshj.version>
-    <sshd.version>2.5.1</sshd.version>
+    <sshd.version>1.2.0</sshd.version>
     <mockftp.version>2.6</mockftp.version>
     <junit.version>4.11</junit.version>
     <mockito.version>2.24.0</mockito.version>
@@ -223,6 +223,11 @@
           <artifactId>jersey-core</artifactId>
         </exclusion>
       </exclusions>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.sshd</groupId>
+      <artifactId>sshd-core</artifactId>
+      <version>${sshd.version}</version>
     </dependency>
     <dependency>
       <groupId>junit</groupId>
