--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
 
   <groupId>io.cdap.plugin</groupId>
   <artifactId>ftp-plugins</artifactId>
-  <version>3.3.0-SNAPSHOT</version>
+  <version>4.0.0-SNAPSHOT</version>
 
   <licenses>
     <license>
@@ -216,7 +216,19 @@
           <artifactId>slf4j-api</artifactId>
           <groupId>org.slf4j</groupId>
         </exclusion>
+        <exclusion>
+          <groupId>commons-net</groupId>
+          <artifactId>commons-net</artifactId>
+        </exclusion>
       </exclusions>
+    </dependency>
+    <!--This dependency is added to fix design time validations as NoClassDefFoundError was coming for FTPClient class.
+    It is already part of hadoop-common library. Make sure to upgrade its version whenever hadoop-common library
+    version got bumped up. -->
+    <dependency>
+      <groupId>commons-net</groupId>
+      <artifactId>commons-net</artifactId>
+      <version>3.1</version>
     </dependency>
     <dependency>
       <groupId>junit</groupId>
@@ -396,7 +408,6 @@
           <includes>
             <include>**/*TestSuite.java</include>
             <include>**/*Test.java</include>
-            <exclude>**/*TestRun.java</exclude>
           </includes>
           <excludes>
             <exclude>**/*TestBase.java</exclude>
