--- a/pom.xml
+++ b/pom.xml
@@ -34,8 +34,8 @@
 
   <properties>
     <!-- properties for script build step that creates the config files for the artifacts -->
-    <data.pipeline.parent>system:cdap-data-pipeline[6.8.0-SNAPSHOT,7.0.0-SNAPSHOT)</data.pipeline.parent>
-    <data.stream.parent>system:cdap-data-streams[6.8.0-SNAPSHOT,7.0.0-SNAPSHOT)</data.stream.parent>
+    <data.pipeline.parent>system:cdap-data-pipeline[6.9.2-SNAPSHOT,7.0.0-SNAPSHOT)</data.pipeline.parent>
+    <data.stream.parent>system:cdap-data-streams[6.9.2-SNAPSHOT,7.0.0-SNAPSHOT)</data.stream.parent>
     <cdap.version>6.8.0</cdap.version>
     <hydrator.version>2.10.0</hydrator.version>
     <hadoop.version>2.3.0</hadoop.version>
@@ -384,7 +384,8 @@
         <version>2.14.1</version>
         <configuration>
           <argLine>-Xmx3g -Djava.awt.headless=true -XX:MaxPermSize=256m
-            -XX:+UseConcMarkSweepGC -Djava.net.preferIPv4Stack=true</argLine>
+            -XX:+UseConcMarkSweepGC -Djava.net.preferIPv4Stack=true
+          </argLine>
           <redirectTestOutputToFile>${surefire.redirectTestOutputToFile}</redirectTestOutputToFile>
           <reuseForks>false</reuseForks>
           <reportFormat>plain</reportFormat>
